ui-v2 body Fix main-body bottom cut-off
main-body was getting cut off at the bottom by 50px. This is fixed by
using padding-top to push it down 50px instead of position: relative and
top: 50px.

--- a/resources/assets/css/shared/general.less
+++ b/resources/assets/css/shared/general.less
@@ -37,8 +37,7 @@ body {
   }
 
   .main-body {
-    position: relative;
-    top: @top-nav-height;
+    padding-top: 50px;
   }
 }
 
